<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-cmake3</name>
  <version>3.4.1</version>
  <description>Gazebo CMake : CMake Modules for Gazebo Projects</description>

  <maintainer email="grey@openrobotics.org">Michael X Grey</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/gazebosim/gz-cmake</url>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
