cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
project(gz-c_static_child VERSION 0.1.0)
find_package(gz-cmake REQUIRED)
gz_configure_project()
gz_find_package(gz-c_no_deps_static REQUIRED)
gz_configure_build(QUIT_IF_BUILD_ERRORS)
gz_create_packages()
gz_create_docs(TAGFILES "${GZ-CORE_NO_DEPS_STATIC_DOXYGEN_TAGFILE} = ${GZ-CORE_NO_DEPS_STATIC_API_URL}")
