cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
project(gz-export_component_deps_pkgconfig VERSION 0.1.0)
find_package(gz-cmake4 REQUIRED)
gz_configure_project()
include(GzPkgConfig)
gz_pkg_check_modules(gz-use_component_deps_c "gz-use_component_deps_c")
gz_configure_build(QUIT_IF_BUILD_ERRORS)
gz_create_packages()
gz_create_docs()
